# swagger.yaml
@@ -31,6 +31,11 @@ paths:
         description: "Anzahl der Ergebnisse. Default = 1000"
         required: false
         type: integer
+      - name: "state"
+        in: "query"
+        description: "Status open|close"
+        required: false
+        type: string
       responses:
         200:
           description: "OK"
